# hexapod_gujcost

./: README.md
ServoDriver/: BOARD_DEV.h  CONNECT.h  ServoDriver.ino
hexapod_controller/: package.xml  setup.py
hexapod_controller/hexapod_controller/: controllers.py
hexapod_controller/launch/: controller.launch.py
hexapod_description/: CMakeLists.txt  package.xml
hexapod_description/launch/: display.launch.py  gazebo.launch.py
hexapod_description/urdf/: hexapod_robot.urdf.xacro
hexapod_mapping/: package.xml  setup.cfg  setup.py
hexapod_mapping/launch/: mapping.launch.py
hexapod_publisher/: package.xml  setup.cfg  setup.py
hexapod_publisher/hexapod_publisher/: simple_publisher.py  simple_subscriber.py
hexapod_step_detection/: package.xml  setup.cfg  setup.py
hexapod_step_detection/hexapod_step_detection/: publish_gyro.py
hexapod_step_detection/launch/: hexapod_step_cycle.launch.py
src/hexapod_controllers/: CMakeLists.txt  package.xml
src/hexapod_controllers/launch/: controllers.launch.py
src/hexapod_controllers/src/: controller.py  gait_generation.py  kinematics.py
src/hexapod_description/: CMakeLists.txt  package.xml
src/hexapod_description/launch/: display.launch.py  gazebo.launch.py
src/hexapod_description/meshes/: Link1_v1.STL  Link2_v1.STL  Link3_v1.STL  Top_cover_v1.STL  base_v1.STL
src/hexapod_description/urdf/: base_link.urdf  hexapod.urdf.xacro
